--- a/app/assets/sass/map-v3/_map-key.scss
+++ b/app/assets/sass/map-v3/_map-key.scss
@@ -170,6 +170,3 @@
   width: 18px;
 }
 
-/* .defra-map-key__container {
-  height: 900px;
-} */
